tests/ui/type-alias-impl-trait/issue-53598.stderr
error: type parameter `T` is mentioned in hidden type of type alias impl trait, but is not declared in its generic args
  --> $DIR/issue-53598.rs:20:9
   |
LL |         S::<T>(Default::default())
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

